--- a/pipeline.conf
+++ b/pipeline.conf
@@ -1,7 +1,19 @@
 pipelinename: python2
 pipelinedescription: python2
-onerroraction: fail
-timeout: 0
-retries: 0
-retrydelay: 0
-steps: []
+parameters: []
+steps:
+- stepid: 1
+  stepname: step1
+  steptype: Python 3.11
+  entrypoint: code.py
+  tasksize: XS
+  parallelism: 1
+  onerroraction: Fail
+  timeout: 0
+  retries: 0
+  retrydelay: 0
+  libraries: []
+  parameters: []
+  parent: []
+coderepository: https://github.com/ren-vis/python2.git
+branch: master
